package com.limatisoft.config;

public class FilePaths {
	public static final String BASE_DIRECTORY = "D:/base_datos/comercialdonmarco";
	public static final String PRODUCT_FILE = "productos.txt";
	public static final String PRODUCT_TEMP_FILE = "productos_temp.txt";

}
